--- a/src/Pwneu.Smtp/appsettings.json
+++ b/src/Pwneu.Smtp/appsettings.json
@@ -2,11 +2,6 @@
   "MessageBroker": {
     "Host": "amqp://pwneu.mq:5672"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Information"
-    }
-  },
+  "Logging:LogLevel:Default": "Information",
   "AllowedHosts": "*"
 }
