--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,11 +1,18 @@
 version: '3.9'
 
 services:
+  pwneu.gateway:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+
   pwneu.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+
   pwneu.smtp:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
