Add Pwneu.Submissions microservice

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,6 @@ version: '3.9'
 
 services:
   pwneu.gateway:
-    image: ${DOCKER_REGISTRY-}pwneu.gateway
     container_name: pwneu.gateway
     depends_on:
       - pwneu.api
@@ -23,7 +22,6 @@ services:
       - pwneu
 
   pwneu.api:
-    image: ${DOCKER_REGISTRY-}pwneu.api
     container_name: pwneu.api
     depends_on:
       - pwneu.db
@@ -34,8 +32,8 @@ services:
       context: .
       dockerfile: src/Pwneu.Api/Dockerfile
     ports:
-      - "7638:8080"
-      - "7639:8081"
+      - "37200:8080"
+      - "37201:8081"
     environment:
       - ASPNETCORE_Kestrel__Certificates__Default__Path=/home/app/.aspnet/https/pwneu.pfx
       - ASPNETCORE_Kestrel__Certificates__Default__Password=${SSL_CERTIFICATE_PASSWORD}
@@ -55,8 +53,60 @@ services:
     networks:
       - pwneu
 
+  pwneu.db:
+    image: postgres:latest
+    container_name: pwneu.db
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    volumes:
+      - ./.containers/db:/var/lib/postgresql/data
+    ports:
+      - "37202:5432"
+    networks:
+      - pwneu
+
+  pwneu.submissions:
+    container_name: pwneu.submissions
+    depends_on:
+      - pwneu.submissions.db
+      - pwneu.cache
+      - pwneu.dashboard
+      - pwneu.mq
+    build:
+      context: .
+      dockerfile: src/Pwneu.Submissions/Dockerfile
+    ports:
+      - "37300:8080"
+      - "37301:8081"
+    environment:
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/home/app/.aspnet/https/pwneu.pfx
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=${SSL_CERTIFICATE_PASSWORD}
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+      - MessageBroker__Username=${RABBITMQ_DEFAULT_USER}
+      - MessageBroker__Password=${RABBITMQ_DEFAULT_PASS}
+    volumes:
+      - ./.containers/certs:/home/app/.aspnet/https:ro
+    networks:
+      - pwneu
+
+  pwneu.submissions.db:
+    image: postgres:latest
+    container_name: pwneu.submissions.db
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    volumes:
+      - ./.containers/submissions.db:/var/lib/postgresql/data
+    ports:
+      - "37302:5432"
+    networks:
+      - pwneu
+
   pwneu.smtp:
-    image: ${DOCKER_REGISTRY-}pwneu.smtp
     container_name: pwneu.smtp
     depends_on:
       - pwneu.api
@@ -65,8 +115,8 @@ services:
       context: .
       dockerfile: src/Pwneu.Smtp/Dockerfile
     ports:
-      - "37300:8080"
-      - "37301:8081"
+      - "37400:8080"
+      - "37401:8081"
     environment:
       - ASPNETCORE_Kestrel__Certificates__Default__Path=/home/app/.aspnet/https/pwneu.pfx
       - ASPNETCORE_Kestrel__Certificates__Default__Password=${SSL_CERTIFICATE_PASSWORD}
@@ -87,20 +137,6 @@ services:
     container_name: pwneu.dashboard
     ports:
       - "18888:18888"
-    networks:
-      - pwneu
-
-  pwneu.db:
-    image: postgres:latest
-    container_name: pwneu.db
-    environment:
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-    volumes:
-      - ./.containers/db:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
     networks:
       - pwneu
 
