--- a/src/Pwneu.Gateway/appsettings.Development.json
+++ b/src/Pwneu.Gateway/appsettings.Development.json
@@ -5,6 +5,11 @@
         "HttpClient": {
           "DangerousAcceptAnyServerCertificate": "true"
         }
+      },
+      "submissions-cluster": {
+        "HttpClient": {
+          "DangerousAcceptAnyServerCertificate": "true"
+        }
       }
     }
   }
