--- a/src/Pwneu.Gateway/appsettings.json
+++ b/src/Pwneu.Gateway/appsettings.json
@@ -11,6 +11,17 @@
             "PathPattern": "{**catch-all}"
           }
         ]
+      },
+      "submissions-route": {
+        "ClusterId": "submissions-cluster",
+        "Match": {
+          "Path": "submissions-api/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathPattern": "{**catch-all}"
+          }
+        ]
       }
     },
     "Clusters": {
@@ -18,6 +29,13 @@
         "Destinations": {
           "destination1": {
             "Address": "https://pwneu.api:8081"
+          }
+        }
+      },
+      "submissions-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "https://pwneu.submissions:8081"
           }
         }
       }
