--- a/src/Pwneu.Submissions/appsettings.Development.json
+++ b/src/Pwneu.Submissions/appsettings.Development.json
@@ -1,2 +1,5 @@
 {
+  "ConnectionStrings": {
+    "Postgres": "Host=pwneu.submissions.db;Port=5432;Database=pwneu;Username=postgres;Password=postgres;Include Error Detail=true"
+  }
 }
